--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,34 @@
+html, body {
+	color: #fff;
+}
+
+a,
+a:visited,
+a:hover,
+a:active {
+	-webkit-transition: all 250ms ease;
+	-moz-transition: all 250ms ease;
+	-ms-transition: all 250ms ease;
+	-o-transition: all 250ms ease;
+	transition: all 250ms ease;
+}
+
+/********************************************
+* Spacers
+********************************************/
+@media only screen and (min-width: 768px) {
+	.text-right-sm {
+		text-align: right;
+	}
+}
+
 /****************************************
 * Home Page - Welcome
 *****************************************/
 body {
-	background: url("../../src/app/images/bg-cat.jpg") no-repeat center center;
+	background: url("app/images/bg-cat.jpg") no-repeat center center;
 	background-attachment: fixed;
 	background-size: cover;
-	padding-bottom: 100px;
 }
 
 main.bg .jumbotron {
@@ -102,6 +125,7 @@ footer {
 	background-color: #111;
 	color: gold;
 	padding: 2rem 0;
+	margin-top: 4rem;
 }
 
 /***
